accelerated-domains: add zjukf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98252,6 +98252,7 @@ server=/zjtzwater.com/114.114.114.114
 server=/zju88.org/114.114.114.114
 server=/zjugis.com/114.114.114.114
 server=/zjujournals.com/114.114.114.114
+server=/zjukf.com/114.114.114.114
 server=/zjun.info/114.114.114.114
 server=/zjuqsc.com/114.114.114.114
 server=/zjut.cc/114.114.114.114
