accelerated-domains: add ah-zl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9627,6 +9627,7 @@ server=/ah-inter.com/114.114.114.114
 server=/ah-suuwaa.com/114.114.114.114
 server=/ah-tl.com/114.114.114.114
 server=/ah-xichuang.com/114.114.114.114
+server=/ah-zl.com/114.114.114.114
 server=/ah12333.com/114.114.114.114
 server=/ah163.com/114.114.114.114
 server=/ah3c.com/114.114.114.114
