--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89826,6 +89826,7 @@ server=/xnye.net/114.114.114.114
 server=/xnzjxx.com/114.114.114.114
 server=/xnzn.net/114.114.114.114
 server=/xnzxyy.com/114.114.114.114
+server=/xnzyyy.com/114.114.114.114
 server=/xoao.com/114.114.114.114
 server=/xoliao.com/114.114.114.114
 server=/xooooa.com/114.114.114.114
