accelerated-domains: add sdsyyxh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71205,6 +71205,7 @@ server=/sdstdc.com/114.114.114.114
 server=/sdstslyy.com/114.114.114.114
 server=/sdsxwz.net/114.114.114.114
 server=/sdsytgcl.com/114.114.114.114
+server=/sdsyyxh.com/114.114.114.114
 server=/sdszszgcyxgs.com/114.114.114.114
 server=/sdtadm.com/114.114.114.114
 server=/sdtdata.com/114.114.114.114
