accelerated-domains: add hsqyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41841,6 +41841,7 @@ server=/hsqhfunds.com/114.114.114.114
 server=/hsqhospital.com/114.114.114.114
 server=/hsqjfw.com/114.114.114.114
 server=/hsqt888.com/114.114.114.114
+server=/hsqyy.com/114.114.114.114
 server=/hsrc.tv/114.114.114.114
 server=/hsrexpo.com/114.114.114.114
 server=/hsrjtk.com/114.114.114.114
