accelerated-domains: add scmy120.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70877,6 +70877,7 @@ server=/scmsky.com/114.114.114.114
 server=/scmttec.com/114.114.114.114
 server=/scmxjs.com/114.114.114.114
 server=/scmxtv.com/114.114.114.114
+server=/scmy120.com/114.114.114.114
 server=/scmydb.com/114.114.114.114
 server=/scmylike.com/114.114.114.114
 server=/scmyns.com/114.114.114.114
