accelerated-domains: add sydey.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76515,6 +76515,7 @@ server=/sycxzx.net/114.114.114.114
 server=/sydaxxw.com/114.114.114.114
 server=/sydcch.com/114.114.114.114
 server=/sydcdjt.com/114.114.114.114
+server=/sydey.com/114.114.114.114
 server=/sydfty.com/114.114.114.114
 server=/sydimg.com/114.114.114.114
 server=/sydjwl.com/114.114.114.114
