accelerated-domains: add synyi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76592,6 +76592,7 @@ server=/synology-cn.com/114.114.114.114
 server=/synologyssb.com/114.114.114.114
 server=/syntao.com/114.114.114.114
 server=/synyan.net/114.114.114.114
+server=/synyi.com/114.114.114.114
 server=/synykj.net/114.114.114.114
 server=/syobserve.com/114.114.114.114
 server=/syoits.com/114.114.114.114
