accelerated-domains: add xnssy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89816,6 +89816,7 @@ server=/xnqcdk.com/114.114.114.114
 server=/xns315.com/114.114.114.114
 server=/xnsbdzb.com/114.114.114.114
 server=/xnsdermyy.com/114.114.114.114
+server=/xnssy.com/114.114.114.114
 server=/xntt.com/114.114.114.114
 server=/xntv.tv/114.114.114.114
 server=/xnw.com/114.114.114.114
