accelerated-domains: add nbdeyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60802,6 +60802,7 @@ server=/nbchen.com/114.114.114.114
 server=/nbcsgo.com/114.114.114.114
 server=/nbdeli.com/114.114.114.114
 server=/nbdeli.net/114.114.114.114
+server=/nbdeyy.com/114.114.114.114
 server=/nbdisco.com/114.114.114.114
 server=/nbdkj.com/114.114.114.114
 server=/nbdyf.com/114.114.114.114
