--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47139,6 +47139,7 @@ server=/jhgtgb.com/114.114.114.114
 server=/jhgujia.com/114.114.114.114
 server=/jhgykt.com/114.114.114.114
 server=/jhhkgj.com/114.114.114.114
+server=/jhhospital.com/114.114.114.114
 server=/jhhygl.com/114.114.114.114
 server=/jhjt.xyz/114.114.114.114
 server=/jhjunda.com/114.114.114.114
