--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69698,6 +69698,7 @@ server=/rqjrb.com/114.114.114.114
 server=/rqjtp.com/114.114.114.114
 server=/rqkr.com/114.114.114.114
 server=/rqroytj33.fun/114.114.114.114
+server=/rqyy.com/114.114.114.114
 server=/rr-sc.com/114.114.114.114
 server=/rr365.com/114.114.114.114
 server=/rrajz.com/114.114.114.114
