--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16724,6 +16724,7 @@ server=/bzsb.info/114.114.114.114
 server=/bzsoso.com/114.114.114.114
 server=/bzszxyy.com/114.114.114.114
 server=/bzszyjx.com/114.114.114.114
+server=/bzszyy.com/114.114.114.114
 server=/bzszyy123.com/114.114.114.114
 server=/bzt120.com/114.114.114.114
 server=/bztdxxl.com/114.114.114.114
