accelerated-domains: add zchospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95832,6 +95832,7 @@ server=/zchat.tech/114.114.114.114
 server=/zchbsb9.com/114.114.114.114
 server=/zchmbx.com/114.114.114.114
 server=/zchmh.com/114.114.114.114
+server=/zchospital.com/114.114.114.114
 server=/zchrgroup.com/114.114.114.114
 server=/zcimg.com/114.114.114.114
 server=/zcinfo.net/114.114.114.114
