--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43411,6 +43411,7 @@ server=/hyyoa.com/114.114.114.114
 server=/hyypjs.com/114.114.114.114
 server=/hyyscgs.com/114.114.114.114
 server=/hyyun.com/114.114.114.114
+server=/hyyyy.net/114.114.114.114
 server=/hyzcservice.com/114.114.114.114
 server=/hyzenhospital.com/114.114.114.114
 server=/hyzhcdn.com/114.114.114.114
