accelerated-domains: add bdfzkyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13613,6 +13613,7 @@ server=/bdfczx.com/114.114.114.114
 server=/bdfmj.com/114.114.114.114
 server=/bdfmkj.com/114.114.114.114
 server=/bdfzcd.net/114.114.114.114
+server=/bdfzkyy.com/114.114.114.114
 server=/bdg-brain.com/114.114.114.114
 server=/bdgamelive.com/114.114.114.114
 server=/bdgp.cc/114.114.114.114
