--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94252,6 +94252,7 @@ server=/ytsanchuan.com/114.114.114.114
 server=/ytsense.com/114.114.114.114
 server=/ytshipin.com/114.114.114.114
 server=/ytssc888.com/114.114.114.114
+server=/ytsyy.com/114.114.114.114
 server=/ytszg.com/114.114.114.114
 server=/ytsznyy.com/114.114.114.114
 server=/yttxcs.com/114.114.114.114
