accelerated-domains: add yz-proton.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95442,6 +95442,7 @@ server=/yyzy-play.vip/114.114.114.114
 server=/yyzyytj.com/114.114.114.114
 server=/yyzzsem.com/114.114.114.114
 server=/yz-iot.com/114.114.114.114
+server=/yz-proton.com/114.114.114.114
 server=/yz-show.com/114.114.114.114
 server=/yz168.cc/114.114.114.114
 server=/yz2pp.com/114.114.114.114
