--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90720,6 +90720,7 @@ server=/xy-invite.com/114.114.114.114
 server=/xy-mp.com/114.114.114.114
 server=/xy.com/114.114.114.114
 server=/xy007.net/114.114.114.114
+server=/xy120.net/114.114.114.114
 server=/xy1212.com/114.114.114.114
 server=/xy1758.com/114.114.114.114
 server=/xy178.com/114.114.114.114
