accelerated-domains: add ycsdyyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91579,6 +91579,7 @@ server=/ycrusher.com/114.114.114.114
 server=/ycrx360.com/114.114.114.114
 server=/ycs120.com/114.114.114.114
 server=/ycsd.work/114.114.114.114
+server=/ycsdyyy.com/114.114.114.114
 server=/ycsound.com/114.114.114.114
 server=/ycsrc.com/114.114.114.114
 server=/ycsystem.com/114.114.114.114
