--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66305,6 +66305,7 @@ server=/qdbcmy.com/114.114.114.114
 server=/qdbdsk.com/114.114.114.114
 server=/qdbhuh.com/114.114.114.114
 server=/qdbocweb.com/114.114.114.114
+server=/qdby.com/114.114.114.114
 server=/qdcaijing.com/114.114.114.114
 server=/qdccb.com/114.114.114.114
 server=/qdccdl.com/114.114.114.114
