--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48776,6 +48776,7 @@ server=/jlsrmyy.net/114.114.114.114
 server=/jlstt.com/114.114.114.114
 server=/jlswlw.com/114.114.114.114
 server=/jlsyqzyy.com/114.114.114.114
+server=/jlszlyy.com/114.114.114.114
 server=/jlszykj.com/114.114.114.114
 server=/jltchina.com/114.114.114.114
 server=/jltrq.com/114.114.114.114
