--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41034,6 +41034,7 @@ server=/hnsyhm.com/114.114.114.114
 server=/hnsyu.net/114.114.114.114
 server=/hnsyyq.com/114.114.114.114
 server=/hnsyzls.com/114.114.114.114
+server=/hnsyzxyy.com/114.114.114.114
 server=/hnszn.com/114.114.114.114
 server=/hntbpm.com/114.114.114.114
 server=/hntchq.com/114.114.114.114
