accelerated-domains: add zdsfy.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95947,6 +95947,7 @@ server=/zdrcw.com/114.114.114.114
 server=/zds22.com/114.114.114.114
 server=/zdsdp.com/114.114.114.114
 server=/zdsee.com/114.114.114.114
+server=/zdsfy.net/114.114.114.114
 server=/zdsju.com/114.114.114.114
 server=/zdslb.com/114.114.114.114
 server=/zdsr.net/114.114.114.114
