--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69589,6 +69589,7 @@ server=/ronghub.com/114.114.114.114
 server=/ronghuiad.com/114.114.114.114
 server=/ronghuisign.com/114.114.114.114
 server=/rongji.com/114.114.114.114
+server=/rongkang.com/114.114.114.114
 server=/rongkao.com/114.114.114.114
 server=/rongledz.com/114.114.114.114
 server=/rongmei.net/114.114.114.114
