accelerated-domains: add jzsyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50436,6 +50436,7 @@ server=/jzsjyksy.com/114.114.114.114
 server=/jzsousuo.com/114.114.114.114
 server=/jzsszyjzx.com/114.114.114.114
 server=/jzsxinyudianqi.com/114.114.114.114
+server=/jzsyy.com/114.114.114.114
 server=/jzszdq.com/114.114.114.114
 server=/jztey.com/114.114.114.114
 server=/jztsjx.com/114.114.114.114
