--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84834,6 +84834,7 @@ server=/whhuiyu.com/114.114.114.114
 server=/whhxi.com/114.114.114.114
 server=/whhxnz.com/114.114.114.114
 server=/whhysound.com/114.114.114.114
+server=/whhyyy.com/114.114.114.114
 server=/whhzhn.com/114.114.114.114
 server=/whhzyj.com/114.114.114.114
 server=/whib.com/114.114.114.114
