accelerated-domains: add bynezyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16536,6 +16536,7 @@ server=/bykszb.com/114.114.114.114
 server=/bylwcc.com/114.114.114.114
 server=/bylwjc.com/114.114.114.114
 server=/bymz.net/114.114.114.114
+server=/bynezyy.com/114.114.114.114
 server=/bynmc.com/114.114.114.114
 server=/bynonco.com/114.114.114.114
 server=/bynrnews.com/114.114.114.114
