accelerated-domains: add zhwyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97778,6 +97778,7 @@ server=/zhwdw.com/114.114.114.114
 server=/zhwenxue.com/114.114.114.114
 server=/zhwjw.net/114.114.114.114
 server=/zhwxwz.com/114.114.114.114
+server=/zhwyy.com/114.114.114.114
 server=/zhx-mall.com/114.114.114.114
 server=/zhx2008.com/114.114.114.114
 server=/zhxbjsjt.com/114.114.114.114
