--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31493,6 +31493,7 @@ server=/fsb-bearing.com/114.114.114.114
 server=/fsbankonline.com/114.114.114.114
 server=/fsbqgd.com/114.114.114.114
 server=/fsccjy.com/114.114.114.114
+server=/fsccyy.com/114.114.114.114
 server=/fscinda.com/114.114.114.114
 server=/fscjfm.com/114.114.114.114
 server=/fscjkj.net/114.114.114.114
