--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37657,6 +37657,7 @@ server=/gzfezx.com/114.114.114.114
 server=/gzfin.com/114.114.114.114
 server=/gzfirst.com/114.114.114.114
 server=/gzfjwzhs.com/114.114.114.114
+server=/gzfqyy.com/114.114.114.114
 server=/gzfrldz.com/114.114.114.114
 server=/gzfsnet.com/114.114.114.114
 server=/gzgajy.com/114.114.114.114
