--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43440,6 +43440,7 @@ server=/hz-winone.com/114.114.114.114
 server=/hz-xin.com/114.114.114.114
 server=/hz-zjsh.com/114.114.114.114
 server=/hz2y.com/114.114.114.114
+server=/hz3201.com/114.114.114.114
 server=/hz3ds.com/114.114.114.114
 server=/hz3y.com/114.114.114.114
 server=/hz66.com/114.114.114.114
