accelerated-domains: add sdrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71202,6 +71202,7 @@ server=/sdqu.com/114.114.114.114
 server=/sdqyslt.com/114.114.114.114
 server=/sdrcu.com/114.114.114.114
 server=/sdrdgw.com/114.114.114.114
+server=/sdrmyy.com/114.114.114.114
 server=/sdrongya.com/114.114.114.114
 server=/sdrsks.org/114.114.114.114
 server=/sdrtgk.com/114.114.114.114
