--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89097,6 +89097,7 @@ server=/xixiarc.com/114.114.114.114
 server=/xixibobo.com/114.114.114.114
 server=/xixiclothing.com/114.114.114.114
 server=/xixidoudizhu.com/114.114.114.114
+server=/xixih.net/114.114.114.114
 server=/xixik.com/114.114.114.114
 server=/xixik.net/114.114.114.114
 server=/xixinghanghr.com/114.114.114.114
