--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50216,6 +50216,7 @@ server=/jxsxdp.com/114.114.114.114
 server=/jxszlfl.com/114.114.114.114
 server=/jxszsj.com/114.114.114.114
 server=/jxszxyjhyy.com/114.114.114.114
+server=/jxszyy.com/114.114.114.114
 server=/jxt1314.com/114.114.114.114
 server=/jxt189.com/114.114.114.114
 server=/jxtech.net/114.114.114.114
