--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41043,6 +41043,7 @@ server=/hnsyzxyy.com/114.114.114.114
 server=/hnszn.com/114.114.114.114
 server=/hntbpm.com/114.114.114.114
 server=/hntchq.com/114.114.114.114
+server=/hntcm.com/114.114.114.114
 server=/hntcmc.net/114.114.114.114
 server=/hnteacher.net/114.114.114.114
 server=/hntele.com/114.114.114.114
