--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81227,6 +81227,7 @@ server=/uhaom.com/114.114.114.114
 server=/uhaozu.com/114.114.114.114
 server=/uhasadmin.com/114.114.114.114
 server=/uhbthn.com/114.114.114.114
+server=/uhcmu.com/114.114.114.114
 server=/uhi02121uik.xyz/114.114.114.114
 server=/uhi02130uik.xyz/114.114.114.114
 server=/uhomecp.com/114.114.114.114
