accelerated-domains: add scsgkyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70936,6 +70936,7 @@ server=/scscms.com/114.114.114.114
 server=/scsddyf.com/114.114.114.114
 server=/scsdzxh.org/114.114.114.114
 server=/scsdzzx.com/114.114.114.114
+server=/scsgkyy.com/114.114.114.114
 server=/scshzx.com/114.114.114.114
 server=/scsjnxh.org/114.114.114.114
 server=/scsjsd.com/114.114.114.114
