accelerated-domains: add zysyjqrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99504,6 +99504,7 @@ server=/zys6d.com/114.114.114.114
 server=/zyskys.com/114.114.114.114
 server=/zysljhslt.com/114.114.114.114
 server=/zystarlink.com/114.114.114.114
+server=/zysyjqrmyy.com/114.114.114.114
 server=/zyt8.com/114.114.114.114
 server=/zytang.net/114.114.114.114
 server=/zytuozhan.com/114.114.114.114
