--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48936,6 +48936,7 @@ server=/jnshu.com/114.114.114.114
 server=/jnskqyy.com/114.114.114.114
 server=/jnslyy.com/114.114.114.114
 server=/jnstdc.com/114.114.114.114
+server=/jnszhqyy.com/114.114.114.114
 server=/jntinchina.com/114.114.114.114
 server=/jntyhl.com/114.114.114.114
 server=/jnw.cc/114.114.114.114
