accelerated-domains: add hfhuamei.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40027,6 +40027,7 @@ server=/hfgjj.com/114.114.114.114
 server=/hfhaopu.com/114.114.114.114
 server=/hfhmw.net/114.114.114.114
 server=/hfhouse.com/114.114.114.114
+server=/hfhuamei.com/114.114.114.114
 server=/hfhwbgyp.com/114.114.114.114
 server=/hfhyw.com/114.114.114.114
 server=/hfi-health.com/114.114.114.114
