--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13612,6 +13612,7 @@ server=/bdf2.com/114.114.114.114
 server=/bdfczx.com/114.114.114.114
 server=/bdfmj.com/114.114.114.114
 server=/bdfmkj.com/114.114.114.114
+server=/bdfyy999.com/114.114.114.114
 server=/bdfzcd.net/114.114.114.114
 server=/bdfzkyy.com/114.114.114.114
 server=/bdg-brain.com/114.114.114.114
