accelerated-domains: add yasyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91413,6 +91413,7 @@ server=/yasking.org/114.114.114.114
 server=/yasn.com/114.114.114.114
 server=/yasuoji-shanyan.com/114.114.114.114
 server=/yasuotu.com/114.114.114.114
+server=/yasyy.com/114.114.114.114
 server=/yatai.com/114.114.114.114
 server=/yataidianli.com/114.114.114.114
 server=/yataiinsur.com/114.114.114.114
