accelerated-domains: add scswyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70950,6 +70950,7 @@ server=/scsntv.com/114.114.114.114
 server=/scssdd.com/114.114.114.114
 server=/scsstjt.com/114.114.114.114
 server=/scsuhuigy.com/114.114.114.114
+server=/scswyy.com/114.114.114.114
 server=/scsxth.com/114.114.114.114
 server=/scsyaszyyy.com/114.114.114.114
 server=/scsyytj.com/114.114.114.114
