--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98850,6 +98850,7 @@ server=/zry97.com/114.114.114.114
 server=/zrys.xyz/114.114.114.114
 server=/zrzhpt.com/114.114.114.114
 server=/zs-e.com/114.114.114.114
+server=/zs-hospital.com/114.114.114.114
 server=/zs-jlc.com/114.114.114.114
 server=/zs-lzlj.com/114.114.114.114
 server=/zs-nj.com/114.114.114.114
