--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31950,6 +31950,7 @@ server=/fy-data.com/114.114.114.114
 server=/fy-game.com/114.114.114.114
 server=/fy027.com/114.114.114.114
 server=/fy169.net/114.114.114.114
+server=/fy1938.com/114.114.114.114
 server=/fy2d.com/114.114.114.114
 server=/fy35.com/114.114.114.114
 server=/fy60.icu/114.114.114.114
