--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49546,6 +49546,7 @@ server=/jstti.com/114.114.114.114
 server=/jstv.com/114.114.114.114
 server=/jstxdm.com/114.114.114.114
 server=/jstxrcb.net/114.114.114.114
+server=/jstxry.com/114.114.114.114
 server=/jsty.com/114.114.114.114
 server=/jstyny.com/114.114.114.114
 server=/jstzhospital.com/114.114.114.114
