--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62884,6 +62884,7 @@ server=/nxnews.net/114.114.114.114
 server=/nxnmedia.com/114.114.114.114
 server=/nxnresearch.com/114.114.114.114
 server=/nxpta.com/114.114.114.114
+server=/nxrmyy.com/114.114.114.114
 server=/nxrrvmy.com/114.114.114.114
 server=/nxrte.com/114.114.114.114
 server=/nxsjgd.com/114.114.114.114
