--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23636,6 +23636,7 @@ server=/czdaiwei.com/114.114.114.114
 server=/czddbearing.com/114.114.114.114
 server=/czdingming.com/114.114.114.114
 server=/czdlj.com/114.114.114.114
+server=/czdqyy.com/114.114.114.114
 server=/czdrbz.com/114.114.114.114
 server=/czdsfy.com/114.114.114.114
 server=/czduxinban.com/114.114.114.114
