--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48173,6 +48173,7 @@ server=/jins-cn.com/114.114.114.114
 server=/jinse.com/114.114.114.114
 server=/jinsebook.com/114.114.114.114
 server=/jinsehuaqin.com/114.114.114.114
+server=/jinsha120.com/114.114.114.114
 server=/jinshacapital.com/114.114.114.114
 server=/jinshakemei.com/114.114.114.114
 server=/jinshanapi.com/114.114.114.114
