--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37798,6 +37798,7 @@ server=/gzshuimh.com/114.114.114.114
 server=/gzshujuhui.com/114.114.114.114
 server=/gzsj.live/114.114.114.114
 server=/gzsjyzx.com/114.114.114.114
+server=/gzslyy.com/114.114.114.114
 server=/gzsq.com/114.114.114.114
 server=/gzsrmyy.com/114.114.114.114
 server=/gzsrunda.com/114.114.114.114
