--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31515,6 +31515,7 @@ server=/fseport.com/114.114.114.114
 server=/fsesa.com/114.114.114.114
 server=/fsfsfz.com/114.114.114.114
 server=/fsfund.com/114.114.114.114
+server=/fsgbly.com/114.114.114.114
 server=/fsgechao.com/114.114.114.114
 server=/fsggb.com/114.114.114.114
 server=/fsghgt.com/114.114.114.114
