accelerated-domains: add xmsssyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89518,6 +89518,7 @@ server=/xmsoushu.com/114.114.114.114
 server=/xmspace.net/114.114.114.114
 server=/xmsqz.com/114.114.114.114
 server=/xmssie.com/114.114.114.114
+server=/xmsssyy.com/114.114.114.114
 server=/xmsuperlite.com/114.114.114.114
 server=/xmtbang.com/114.114.114.114
 server=/xmtyy.net/114.114.114.114
