--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22676,6 +22676,7 @@ server=/cqrmb.com/114.114.114.114
 server=/cqrmrq.com/114.114.114.114
 server=/cqsckj02.com/114.114.114.114
 server=/cqscmy.net/114.114.114.114
+server=/cqsfybjy.com/114.114.114.114
 server=/cqshenou.com/114.114.114.114
 server=/cqshipping.com/114.114.114.114
 server=/cqshouxi.com/114.114.114.114
