accelerated-domains: add ydsrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91687,6 +91687,7 @@ server=/ydr.me/114.114.114.114
 server=/ydsaso.com/114.114.114.114
 server=/ydscan.net/114.114.114.114
 server=/ydsjjs.com/114.114.114.114
+server=/ydsrmyy.com/114.114.114.114
 server=/ydstatic.com/114.114.114.114
 server=/ydsyyy.com/114.114.114.114
 server=/ydt-express.com/114.114.114.114
