accelerated-domains: add intecheye.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45439,6 +45439,7 @@ server=/intalidvp.com/114.114.114.114
 server=/intcache.net/114.114.114.114
 server=/intcredo.com/114.114.114.114
 server=/intdmp.com/114.114.114.114
+server=/intecheye.com/114.114.114.114
 server=/intecol-10iwc.com/114.114.114.114
 server=/integrity-funds.com/114.114.114.114
 server=/intekey.com/114.114.114.114
