--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90879,6 +90879,7 @@ server=/xystoy.com/114.114.114.114
 server=/xyswychgs.com/114.114.114.114
 server=/xysy.com/114.114.114.114
 server=/xysyzx.com/114.114.114.114
+server=/xyszxyy.com/114.114.114.114
 server=/xyt-tech.com/114.114.114.114
 server=/xytiyu.com/114.114.114.114
 server=/xytjcpj.com/114.114.114.114
