accelerated-domains: add tongrentang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79532,6 +79532,7 @@ server=/tongmijx.com/114.114.114.114
 server=/tongniguoji.com/114.114.114.114
 server=/tongquee.com/114.114.114.114
 server=/tongrenchina.org/114.114.114.114
+server=/tongrentang.com/114.114.114.114
 server=/tongshanbank.com/114.114.114.114
 server=/tongshengjixie.com/114.114.114.114
 server=/tongshiling.net/114.114.114.114
