accelerated-domains: add sxcahosp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76358,6 +76358,7 @@ server=/sxbang.net/114.114.114.114
 server=/sxbawy.com/114.114.114.114
 server=/sxbdf.com/114.114.114.114
 server=/sxbest.com/114.114.114.114
+server=/sxcahosp.com/114.114.114.114
 server=/sxccb.com/114.114.114.114
 server=/sxcd-gyl.com/114.114.114.114
 server=/sxchangshengjt.com/114.114.114.114
