--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39413,6 +39413,7 @@ server=/hdmtv168.com/114.114.114.114
 server=/hdmv.org/114.114.114.114
 server=/hdnd01.com/114.114.114.114
 server=/hdp88.com/114.114.114.114
+server=/hdph.com/114.114.114.114
 server=/hdpyqa.com/114.114.114.114
 server=/hdpyqc.com/114.114.114.114
 server=/hdpyqd.com/114.114.114.114
