--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96887,6 +96887,7 @@ server=/zhezheai.com/114.114.114.114
 server=/zhezhekan.com/114.114.114.114
 server=/zhezhewhkj.com/114.114.114.114
 server=/zhfc.com/114.114.114.114
+server=/zhfivehospital.com/114.114.114.114
 server=/zhfund.com/114.114.114.114
 server=/zhfwq.com/114.114.114.114
 server=/zhgc.com/114.114.114.114
