--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27532,6 +27532,7 @@ server=/dytt8.com/114.114.114.114
 server=/dytt8.net/114.114.114.114
 server=/dytt89.com/114.114.114.114
 server=/dyvideotape.com/114.114.114.114
+server=/dywuyuan.com/114.114.114.114
 server=/dywxs.com/114.114.114.114
 server=/dyxldjy.com/114.114.114.114
 server=/dyxsdwm.com/114.114.114.114
