accelerated-domains: add sutanapp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76200,6 +76200,7 @@ server=/susoul.com/114.114.114.114
 server=/sustcra.com/114.114.114.114
 server=/sustech.online/114.114.114.114
 server=/susudm.com/114.114.114.114
+server=/sutanapp.com/114.114.114.114
 server=/suteidc.com/114.114.114.114
 server=/suteshop.com/114.114.114.114
 server=/sutune.me/114.114.114.114
