--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15043,6 +15043,7 @@ server=/bjkaihua.net/114.114.114.114
 server=/bjkdvm.com/114.114.114.114
 server=/bjkqj.com/114.114.114.114
 server=/bjkqyx.com/114.114.114.114
+server=/bjkqyy.com/114.114.114.114
 server=/bjkrtwl.com/114.114.114.114
 server=/bjktaz.com/114.114.114.114
 server=/bjktrh.com/114.114.114.114
