accelerated-domains: add gr-hospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34423,6 +34423,7 @@ server=/gqsym.com/114.114.114.114
 server=/gqt168.com/114.114.114.114
 server=/gqwwshbdd1.fun/114.114.114.114
 server=/gqxtq.com/114.114.114.114
+server=/gr-hospital.com/114.114.114.114
 server=/gr3xuaov74khb.com/114.114.114.114
 server=/gra-moissanitesorg.com/114.114.114.114
 server=/grablan.com/114.114.114.114
