accelerated-domains: add fnhealth.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31130,6 +31130,7 @@ server=/fnedge.net/114.114.114.114
 server=/fnetlink.com/114.114.114.114
 server=/fnf-foods.com/114.114.114.114
 server=/fnfcutlery.com/114.114.114.114
+server=/fnhealth.com/114.114.114.114
 server=/fnji.com/114.114.114.114
 server=/fnjiasu.com/114.114.114.114
 server=/fnjsq.com/114.114.114.114
