accelerated-domains: add ludaopei-bjyz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55933,6 +55933,7 @@ server=/luckyxp.net/114.114.114.114
 server=/lucode.net/114.114.114.114
 server=/lucy365.com/114.114.114.114
 server=/lucycat.xyz/114.114.114.114
+server=/ludaopei-bjyz.com/114.114.114.114
 server=/ludashi.com/114.114.114.114
 server=/ludashicdn.com/114.114.114.114
 server=/ludashisafe.com/114.114.114.114
