--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86874,6 +86874,7 @@ server=/wzsee.com/114.114.114.114
 server=/wzshe.com/114.114.114.114
 server=/wzsky.net/114.114.114.114
 server=/wzspinneret.com/114.114.114.114
+server=/wzsrmyy.com/114.114.114.114
 server=/wzssx.net/114.114.114.114
 server=/wzstsj.com/114.114.114.114
 server=/wzsxj.net/114.114.114.114
