accelerated-domains: add yffy120.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91951,6 +91951,7 @@ server=/yfdxs.com/114.114.114.114
 server=/yfdyf.com/114.114.114.114
 server=/yfdzy.com/114.114.114.114
 server=/yffood.com/114.114.114.114
+server=/yffy120.com/114.114.114.114
 server=/yffzkl.com/114.114.114.114
 server=/yfgdled.com/114.114.114.114
 server=/yfgj68.com/114.114.114.114
