accelerated-domains: add shgkh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72583,6 +72583,7 @@ server=/shgbitcloud.com/114.114.114.114
 server=/shgci.com/114.114.114.114
 server=/shgjj.com/114.114.114.114
 server=/shgjq.com/114.114.114.114
+server=/shgkh.com/114.114.114.114
 server=/shgkw.org/114.114.114.114
 server=/shglgf.com/114.114.114.114
 server=/shgsec.com/114.114.114.114
