--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41800,6 +41800,7 @@ server=/hs13z.net/114.114.114.114
 server=/hs313.net/114.114.114.114
 server=/hs326.com/114.114.114.114
 server=/hs499.com/114.114.114.114
+server=/hs5g.com/114.114.114.114
 server=/hs65.com/114.114.114.114
 server=/hs85.com/114.114.114.114
 server=/hs86735.com/114.114.114.114
