accelerated-domains: add sinopharmhospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73918,6 +73918,7 @@ server=/sinopecsales.com/114.114.114.114
 server=/sinopecsenmeifj.com/114.114.114.114
 server=/sinopharm.com/114.114.114.114
 server=/sinopharmholding.com/114.114.114.114
+server=/sinopharmhospital.com/114.114.114.114
 server=/sinopharmzl.com/114.114.114.114
 server=/sinophex.com/114.114.114.114
 server=/sinopr.org/114.114.114.114
