accelerated-domains: add manzx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57243,6 +57243,7 @@ server=/manzhan.com/114.114.114.114
 server=/manzu365.com/114.114.114.114
 server=/manzuo.com/114.114.114.114
 server=/manzuocaipu.com/114.114.114.114
+server=/manzx.com/114.114.114.114
 server=/mao-shen.com/114.114.114.114
 server=/mao.fan/114.114.114.114
 server=/mao35.com/114.114.114.114
