accelerated-domains: add yeemei.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91778,6 +91778,7 @@ server=/yeekit.com/114.114.114.114
 server=/yeelight.com/114.114.114.114
 server=/yeelink.net/114.114.114.114
 server=/yeelogo.com/114.114.114.114
+server=/yeemei.com/114.114.114.114
 server=/yeemiao.com/114.114.114.114
 server=/yeemiao.net/114.114.114.114
 server=/yeepay.com/114.114.114.114
