--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50470,6 +50470,7 @@ server=/jzsszyjzx.com/114.114.114.114
 server=/jzsxinyudianqi.com/114.114.114.114
 server=/jzsyy.com/114.114.114.114
 server=/jzszdq.com/114.114.114.114
+server=/jzszzx.com/114.114.114.114
 server=/jztey.com/114.114.114.114
 server=/jztsjx.com/114.114.114.114
 server=/jztsjyxx.com/114.114.114.114
