--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61211,6 +61211,7 @@ server=/newe.tv/114.114.114.114
 server=/newer2001.com/114.114.114.114
 server=/newersuperdrover.com/114.114.114.114
 server=/newevcar.com/114.114.114.114
+server=/neweyezs.com/114.114.114.114
 server=/newfastloan.cc/114.114.114.114
 server=/newgscloud.com/114.114.114.114
 server=/newharbour.net/114.114.114.114
