accelerated-domains: add shtazy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73189,6 +73189,7 @@ server=/shsyf.com/114.114.114.114
 server=/shsz17.com/114.114.114.114
 server=/shszsoft.com/114.114.114.114
 server=/shtangchao.com/114.114.114.114
+server=/shtazy.com/114.114.114.114
 server=/shtbi.com/114.114.114.114
 server=/shtdgj.com/114.114.114.114
 server=/shtdsc.com/114.114.114.114
