--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71880,6 +71880,7 @@ server=/shafa.com/114.114.114.114
 server=/shafaguanjia.com/114.114.114.114
 server=/shaftgd.com/114.114.114.114
 server=/shagent.com/114.114.114.114
+server=/shagyy.com/114.114.114.114
 server=/shahadath.com/114.114.114.114
 server=/shahupark.com/114.114.114.114
 server=/shaidc.com/114.114.114.114
