accelerated-domains: add zlhospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98494,6 +98494,7 @@ server=/zlgmcu.com/114.114.114.114
 server=/zlgpy.com/114.114.114.114
 server=/zlgsj.com/114.114.114.114
 server=/zlhome.com/114.114.114.114
+server=/zlhospital.com/114.114.114.114
 server=/zlhui.com/114.114.114.114
 server=/zlibs.com/114.114.114.114
 server=/zlimg.com/114.114.114.114
