--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60054,6 +60054,7 @@ server=/mvpmeta.com/114.114.114.114
 server=/mvpsky.com/114.114.114.114
 server=/mvs-intel.com/114.114.114.114
 server=/mvtianshanlr.com/114.114.114.114
+server=/mvwchina.com/114.114.114.114
 server=/mvwitz.xyz/114.114.114.114
 server=/mvyxws.com/114.114.114.114
 server=/mw.com/114.114.114.114
