accelerated-domains: add smasmj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74444,6 +74444,7 @@ server=/smartyun8.com/114.114.114.114
 server=/smartzzx.com/114.114.114.114
 server=/smarun.com/114.114.114.114
 server=/smaryun.com/114.114.114.114
+server=/smasmj.com/114.114.114.114
 server=/smaty.net/114.114.114.114
 server=/smb956101.com/114.114.114.114
 server=/smbinn.com/114.114.114.114
