--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24444,6 +24444,7 @@ server=/dayangmotorcycle.com/114.114.114.114
 server=/dayangmuye.com/114.114.114.114
 server=/dayangshop.com/114.114.114.114
 server=/dayanmei.com/114.114.114.114
+server=/dayanyanglao.com/114.114.114.114
 server=/dayanzai.me/114.114.114.114
 server=/dayapress.com/114.114.114.114
 server=/dayayu.com/114.114.114.114
