accelerated-domains: add shneuro.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72956,6 +72956,7 @@ server=/shmylike.com/114.114.114.114
 server=/shnaile.com/114.114.114.114
 server=/shnakun.com/114.114.114.114
 server=/shnb12315.com/114.114.114.114
+server=/shneuro.org/114.114.114.114
 server=/shneweye.com/114.114.114.114
 server=/shnmnm.com/114.114.114.114
 server=/shnne.com/114.114.114.114
