accelerated-domains: add shxkyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73544,6 +73544,7 @@ server=/shxibeiquanshe.com/114.114.114.114
 server=/shxichina.com/114.114.114.114
 server=/shxil.com/114.114.114.114
 server=/shxincn.com/114.114.114.114
+server=/shxkyy.com/114.114.114.114
 server=/shxlkj.com/114.114.114.114
 server=/shxmbzcl.com/114.114.114.114
 server=/shxmhjs.com/114.114.114.114
