accelerated-domains: add sy021.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76556,6 +76556,7 @@ server=/sxzyfy.com/114.114.114.114
 server=/sxzzdxsc.com/114.114.114.114
 server=/sy-game.com/114.114.114.114
 server=/sy-home.com/114.114.114.114
+server=/sy021.com/114.114.114.114
 server=/sy118.com/114.114.114.114
 server=/sy12306.com/114.114.114.114
 server=/sy12328.com/114.114.114.114
