accelerated-domains: add liqun.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54725,6 +54725,7 @@ server=/liqinet.com/114.114.114.114
 server=/liqinyi.com/114.114.114.114
 server=/liquan.com/114.114.114.114
 server=/liquidnetwork.com/114.114.114.114
+server=/liqun.org/114.114.114.114
 server=/liqun.vip/114.114.114.114
 server=/liqunshop.com/114.114.114.114
 server=/liqwei.com/114.114.114.114
