accelerated-domains: add sibpt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73645,6 +73645,7 @@ server=/siaoao.com/114.114.114.114
 server=/sias-sha.com/114.114.114.114
 server=/sibfi.com/114.114.114.114
 server=/sibida.net/114.114.114.114
+server=/sibpt.com/114.114.114.114
 server=/sibsiu.com/114.114.114.114
 server=/sibuzyn.com/114.114.114.114
 server=/sicarrier.com/114.114.114.114
