accelerated-domains: add shhqgc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72617,6 +72617,7 @@ server=/shhl56.com/114.114.114.114
 server=/shhmbio.com/114.114.114.114
 server=/shhmu.net/114.114.114.114
 server=/shhorse.com/114.114.114.114
+server=/shhqgc.com/114.114.114.114
 server=/shhqyy.com/114.114.114.114
 server=/shhs-tw.com/114.114.114.114
 server=/shhuaerkang.com/114.114.114.114
