accelerated-domains: add shhkyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72613,6 +72613,7 @@ server=/shhgzf.com/114.114.114.114
 server=/shhiminhm.com/114.114.114.114
 server=/shhkcc.com/114.114.114.114
 server=/shhksports.com/114.114.114.114
+server=/shhkyy.com/114.114.114.114
 server=/shhl56.com/114.114.114.114
 server=/shhmbio.com/114.114.114.114
 server=/shhmu.net/114.114.114.114
