--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65318,6 +65318,7 @@ server=/playwonderful.com/114.114.114.114
 server=/playwxgame.com/114.114.114.114
 server=/playyx.com/114.114.114.114
 server=/playzy.com/114.114.114.114
+server=/plbig.com/114.114.114.114
 server=/plc11.com/114.114.114.114
 server=/plcdn.net/114.114.114.114
 server=/plcent.com/114.114.114.114
