--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66251,6 +66251,7 @@ server=/qbview.com/114.114.114.114
 server=/qbxz.com/114.114.114.114
 server=/qbxzywyh.com/114.114.114.114
 server=/qc-hr.com/114.114.114.114
+server=/qc-shanghaipathology.com/114.114.114.114
 server=/qc1h.com/114.114.114.114
 server=/qc6.com/114.114.114.114
 server=/qcbaas.com/114.114.114.114
