--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72263,6 +72263,7 @@ server=/shccio.com/114.114.114.114
 server=/shcell.org/114.114.114.114
 server=/shcfcd.com/114.114.114.114
 server=/shchengkao.com/114.114.114.114
+server=/shchnkyy.com/114.114.114.114
 server=/shchyy.net/114.114.114.114
 server=/shclearing.com/114.114.114.114
 server=/shcljoy.com/114.114.114.114
