--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72282,6 +72282,7 @@ server=/shczssyq.com/114.114.114.114
 server=/shczyy.com/114.114.114.114
 server=/shdancecenter.com/114.114.114.114
 server=/shdcjt.com/114.114.114.114
+server=/shdingzhidental.com/114.114.114.114
 server=/shdirong.com/114.114.114.114
 server=/shdjt.com/114.114.114.114
 server=/shdmgs.com/114.114.114.114
