accelerated-domains: add kaiyuanhospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50657,6 +50657,7 @@ server=/kaiyuan.me/114.114.114.114
 server=/kaiyuan308.vip/114.114.114.114
 server=/kaiyuanbusiness.com/114.114.114.114
 server=/kaiyuangroup.cc/114.114.114.114
+server=/kaiyuanhospital.com/114.114.114.114
 server=/kaiyuanhotels.com/114.114.114.114
 server=/kaiyuantp.vip/114.114.114.114
 server=/kaiyuanweilaikeji.com/114.114.114.114
