accelerated-domains: add kangyang51.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50764,6 +50764,7 @@ server=/kangxi55wlsf.com/114.114.114.114
 server=/kangxidi.com/114.114.114.114
 server=/kangxin.com/114.114.114.114
 server=/kangxinzhiyuan.com/114.114.114.114
+server=/kangyang51.com/114.114.114.114
 server=/kangyiqiye.com/114.114.114.114
 server=/kangyuntang.com/114.114.114.114
 server=/kangze.com/114.114.114.114
