accelerated-domains: add xupupifu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90587,6 +90587,7 @@ server=/xupo.net/114.114.114.114
 server=/xuprinter.com/114.114.114.114
 server=/xupu.name/114.114.114.114
 server=/xupu120.com/114.114.114.114
+server=/xupupifu.com/114.114.114.114
 server=/xuqyfw.com/114.114.114.114
 server=/xurong.xyz/114.114.114.114
 server=/xuruowei.com/114.114.114.114
