accelerated-domains: add cwzdgroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23400,6 +23400,7 @@ server=/cwtc.com/114.114.114.114
 server=/cwxzx.com/114.114.114.114
 server=/cwyan.com/114.114.114.114
 server=/cwz12123.com/114.114.114.114
+server=/cwzdgroup.com/114.114.114.114
 server=/cx-smarthome.com/114.114.114.114
 server=/cx.cc/114.114.114.114
 server=/cx001.com/114.114.114.114
