accelerated-domains: add shfa120.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72581,6 +72581,7 @@ server=/sheyingtg.com/114.114.114.114
 server=/sheyou.com/114.114.114.114
 server=/shezaixian.com/114.114.114.114
 server=/shezfy.com/114.114.114.114
+server=/shfa120.com/114.114.114.114
 server=/shfamily.com/114.114.114.114
 server=/shfangshui.com/114.114.114.114
 server=/shfayy.com/114.114.114.114
