--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91837,6 +91837,7 @@ server=/yelixiali.com/114.114.114.114
 server=/yellowjm.com/114.114.114.114
 server=/yellowriver.org/114.114.114.114
 server=/yelook.com/114.114.114.114
+server=/yelot.com/114.114.114.114
 server=/yemacaijing.com/114.114.114.114
 server=/yemaili.com/114.114.114.114
 server=/yemancomic.com/114.114.114.114
