--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70267,6 +70267,7 @@ server=/s936.com/114.114.114.114
 server=/s9377.com/114.114.114.114
 server=/s95r.com/114.114.114.114
 server=/s98s2.com/114.114.114.114
+server=/s9hospital.com/114.114.114.114
 server=/s9yun.com/114.114.114.114
 server=/sa-ec.com/114.114.114.114
 server=/sa-log.com/114.114.114.114
