--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15165,6 +15165,7 @@ server=/bjsxt.com/114.114.114.114
 server=/bjsydq.com/114.114.114.114
 server=/bjsyqw.com/114.114.114.114
 server=/bjsytv.com/114.114.114.114
+server=/bjsyzy.com/114.114.114.114
 server=/bjszhd.net/114.114.114.114
 server=/bjszlsjt.com/114.114.114.114
 server=/bjtcf.com/114.114.114.114
