accelerated-domains: add rongkeyiyuan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69644,6 +69644,7 @@ server=/ronghuisign.com/114.114.114.114
 server=/rongji.com/114.114.114.114
 server=/rongkang.com/114.114.114.114
 server=/rongkao.com/114.114.114.114
+server=/rongkeyiyuan.com/114.114.114.114
 server=/rongledz.com/114.114.114.114
 server=/rongmei.net/114.114.114.114
 server=/rongnav.com/114.114.114.114
