accelerated-domains: add hdfybjy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39394,6 +39394,7 @@ server=/hdeexpo.com/114.114.114.114
 server=/hdem12.com/114.114.114.114
 server=/hdeso.com/114.114.114.114
 server=/hdfimg.com/114.114.114.114
+server=/hdfybjy.com/114.114.114.114
 server=/hdgogogo.com/114.114.114.114
 server=/hdh.im/114.114.114.114
 server=/hdhgzx.com/114.114.114.114
