accelerated-domains: add xcqpayy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87280,6 +87280,7 @@ server=/xcpapa.xyz/114.114.114.114
 server=/xcpxssx.com/114.114.114.114
 server=/xcq2022.com/114.114.114.114
 server=/xcq518.com/114.114.114.114
+server=/xcqpayy.com/114.114.114.114
 server=/xcqxcq.com/114.114.114.114
 server=/xcrmyy.com/114.114.114.114
 server=/xcsaz.com/114.114.114.114
