--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81316,6 +81316,7 @@ server=/ui100day.com/114.114.114.114
 server=/ui63.com/114.114.114.114
 server=/uib110.com/114.114.114.114
 server=/uibep.com/114.114.114.114
+server=/uibhealthcare.com/114.114.114.114
 server=/uibim.com/114.114.114.114
 server=/uibmm.com/114.114.114.114
 server=/uicats.com/114.114.114.114
