accelerated-domains: add ihuayou.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44728,6 +44728,7 @@ server=/ihuajian.com/114.114.114.114
 server=/ihuan.me/114.114.114.114
 server=/ihuanling.com/114.114.114.114
 server=/ihuanque.com/114.114.114.114
+server=/ihuayou.com/114.114.114.114
 server=/ihuazhan.net/114.114.114.114
 server=/ihui.com/114.114.114.114
 server=/ihuidian.com/114.114.114.114
