--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49567,6 +49567,7 @@ server=/jstfdz.com/114.114.114.114
 server=/jsthinktank.com/114.114.114.114
 server=/jsthjsgc.com/114.114.114.114
 server=/jstide.com/114.114.114.114
+server=/jstlcyy.com/114.114.114.114
 server=/jstlgn.com/114.114.114.114
 server=/jstore.site/114.114.114.114
 server=/jstour.com/114.114.114.114
