accelerated-domains: add jingshizyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48041,6 +48041,7 @@ server=/jingshibianhuren.com/114.114.114.114
 server=/jingshicd.com/114.114.114.114
 server=/jingshifang.net/114.114.114.114
 server=/jingshistudy.com/114.114.114.114
+server=/jingshizyy.com/114.114.114.114
 server=/jingshun-wl.com/114.114.114.114
 server=/jingsocial.com/114.114.114.114
 server=/jingtang.xyz/114.114.114.114
