accelerated-domains: add jiaenhospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47264,6 +47264,7 @@ server=/jiadule.com/114.114.114.114
 server=/jiaduobao.ru/114.114.114.114
 server=/jiae.com/114.114.114.114
 server=/jiaenderen.com/114.114.114.114
+server=/jiaenhospital.com/114.114.114.114
 server=/jiafang168.com/114.114.114.114
 server=/jiafenqi.com/114.114.114.114
 server=/jiagedan.com/114.114.114.114
