--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93543,6 +93543,7 @@ server=/yongjindl.com/114.114.114.114
 server=/yongjx.com/114.114.114.114
 server=/yongkao.com/114.114.114.114
 server=/yonglibao.com/114.114.114.114
+server=/yonglinyy.com/114.114.114.114
 server=/yonglvtong.com/114.114.114.114
 server=/yongmei0537.com/114.114.114.114
 server=/yongootech.com/114.114.114.114
