accelerated-domains: add bjnxgbyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15086,6 +15086,7 @@ server=/bjmxxh.com/114.114.114.114
 server=/bjmzw.com/114.114.114.114
 server=/bjnaxl.com/114.114.114.114
 server=/bjnsr.com/114.114.114.114
+server=/bjnxgbyy.com/114.114.114.114
 server=/bjoutai.com/114.114.114.114
 server=/bjp321.com/114.114.114.114
 server=/bjpag.com/114.114.114.114
