accelerated-domains: add lgyzyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53980,6 +53980,7 @@ server=/lguohe.com/114.114.114.114
 server=/lgwy.net/114.114.114.114
 server=/lgxly.com/114.114.114.114
 server=/lgyudiao.com/114.114.114.114
+server=/lgyzyy.com/114.114.114.114
 server=/lgzowo.com/114.114.114.114
 server=/lgzzu.com/114.114.114.114
 server=/lh-lx.com/114.114.114.114
