--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23402,6 +23402,7 @@ server=/cwlchina.com/114.114.114.114
 server=/cwliupaotea.com/114.114.114.114
 server=/cwmcs.com/114.114.114.114
 server=/cwmlm.com/114.114.114.114
+server=/cwmzyyy.com/114.114.114.114
 server=/cwq.com/114.114.114.114
 server=/cwtc.com/114.114.114.114
 server=/cwxzx.com/114.114.114.114
