--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66596,6 +66596,7 @@ server=/qhdnews.com/114.114.114.114
 server=/qhdren.com/114.114.114.114
 server=/qhduhu.com/114.114.114.114
 server=/qhdxgps.com/114.114.114.114
+server=/qhdzyy.com/114.114.114.114
 server=/qhea.com/114.114.114.114
 server=/qhee-ma.com/114.114.114.114
 server=/qhee.com/114.114.114.114
