accelerated-domains: add bjddtm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14944,6 +14944,7 @@ server=/bjcyzg.com/114.114.114.114
 server=/bjd-mc.com/114.114.114.114
 server=/bjdcfy.com/114.114.114.114
 server=/bjdclib.com/114.114.114.114
+server=/bjddtm.com/114.114.114.114
 server=/bjdfxj.com/114.114.114.114
 server=/bjdhwy.com/114.114.114.114
 server=/bjdiaoyu.com/114.114.114.114
