--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47284,6 +47284,7 @@ server=/jiagulun.com/114.114.114.114
 server=/jiagumen.com/114.114.114.114
 server=/jiaguowenhua.com/114.114.114.114
 server=/jiaguwenxf.com/114.114.114.114
+server=/jiahecare.com/114.114.114.114
 server=/jiaheu.com/114.114.114.114
 server=/jiahua-sz.com/114.114.114.114
 server=/jiahuacinema.com/114.114.114.114
