accelerated-domains: add tianyongcheng.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78907,6 +78907,7 @@ server=/tianyitop.com/114.114.114.114
 server=/tianyiwangxiao.com/114.114.114.114
 server=/tianyiwenkong.com/114.114.114.114
 server=/tianyizhihui.com/114.114.114.114
+server=/tianyongcheng.com/114.114.114.114
 server=/tianyuanjiudian.com/114.114.114.114
 server=/tianyuanpet.com/114.114.114.114
 server=/tianyuchaye.com/114.114.114.114
