accelerated-domains: add bjsftzxyjhyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15135,6 +15135,7 @@ server=/bjsdkj.com/114.114.114.114
 server=/bjsdr.org/114.114.114.114
 server=/bjsfdr.com/114.114.114.114
 server=/bjsfrj.com/114.114.114.114
+server=/bjsftzxyjhyy.com/114.114.114.114
 server=/bjsgzgs.com/114.114.114.114
 server=/bjshaet.com/114.114.114.114
 server=/bjsheng.com/114.114.114.114
