accelerated-domains: add clqrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21039,6 +21039,7 @@ server=/clpga.org/114.114.114.114
 server=/clqccy.com/114.114.114.114
 server=/clqcgsgw.com/114.114.114.114
 server=/clqctxc.com/114.114.114.114
+server=/clqrmyy.com/114.114.114.114
 server=/clroi.com/114.114.114.114
 server=/cls.cc/114.114.114.114
 server=/clsbhs.com/114.114.114.114
