accelerated-domains: add bjjszyyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15037,6 +15037,7 @@ server=/bjjkglxh.org/114.114.114.114
 server=/bjjmzh.com/114.114.114.114
 server=/bjjnzf.com/114.114.114.114
 server=/bjjqzyy.com/114.114.114.114
+server=/bjjszyyy.com/114.114.114.114
 server=/bjjtat.com/114.114.114.114
 server=/bjjubao.org/114.114.114.114
 server=/bjjzsc.com/114.114.114.114
