accelerated-domains: add jt120.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49681,6 +49681,7 @@ server=/jszn.ink/114.114.114.114
 server=/jszpw.net/114.114.114.114
 server=/jszygs.com/114.114.114.114
 server=/jt-it.com/114.114.114.114
+server=/jt120.com/114.114.114.114
 server=/jt56w.com/114.114.114.114
 server=/jt62.com/114.114.114.114
 server=/jtamc.com/114.114.114.114
