accelerated-domains: add qhdjgyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66598,6 +66598,7 @@ server=/qhdcm.com/114.114.114.114
 server=/qhdfxkj.com/114.114.114.114
 server=/qhdgjj.com/114.114.114.114
 server=/qhdglc.com/114.114.114.114
+server=/qhdjgyy.com/114.114.114.114
 server=/qhdlcdn.com/114.114.114.114
 server=/qhdnews.com/114.114.114.114
 server=/qhdren.com/114.114.114.114
