accelerated-domains: add xj-etyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89238,6 +89238,7 @@ server=/xizi.com/114.114.114.114
 server=/xiziquan.com/114.114.114.114
 server=/xiziwang.net/114.114.114.114
 server=/xj-biotech.com/114.114.114.114
+server=/xj-etyy.com/114.114.114.114
 server=/xj-zp.com/114.114.114.114
 server=/xj120.com/114.114.114.114
 server=/xj123.info/114.114.114.114
