accelerated-domains: add nianlun010.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61449,6 +61449,7 @@ server=/nianhua.plus/114.114.114.114
 server=/niankawang.com/114.114.114.114
 server=/nianlia.com/114.114.114.114
 server=/nianlingjisuanqi.com/114.114.114.114
+server=/nianlun010.com/114.114.114.114
 server=/niannz.com/114.114.114.114
 server=/nianqin.cc/114.114.114.114
 server=/nianqin123.com/114.114.114.114
