accelerated-domains: add bjxyjf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15240,6 +15240,7 @@ server=/bjxwx.com/114.114.114.114
 server=/bjxx.vip/114.114.114.114
 server=/bjxx8.com/114.114.114.114
 server=/bjxydh.com/114.114.114.114
+server=/bjxyjf.com/114.114.114.114
 server=/bjxyjy.com/114.114.114.114
 server=/bjxyzgt.com/114.114.114.114
 server=/bjxzlou.com/114.114.114.114
