accelerated-domains: add hy120.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43325,6 +43325,7 @@ server=/hy-la.com/114.114.114.114
 server=/hy-zr.com/114.114.114.114
 server=/hy01888.com/114.114.114.114
 server=/hy05190134.com/114.114.114.114
+server=/hy120.com/114.114.114.114
 server=/hy123.com/114.114.114.114
 server=/hy1234567.com/114.114.114.114
 server=/hy2046.com/114.114.114.114
