accelerated-domains: add bjpryk.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15099,6 +15099,7 @@ server=/bjpfh.com/114.114.114.114
 server=/bjpgsfjxh.com/114.114.114.114
 server=/bjpinweixuan.com/114.114.114.114
 server=/bjpowernode.com/114.114.114.114
+server=/bjpryk.com/114.114.114.114
 server=/bjqcjdcj.com/114.114.114.114
 server=/bjqh.org/114.114.114.114
 server=/bjqhgjj.com/114.114.114.114
