--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42400,6 +42400,7 @@ server=/huasyun.com/114.114.114.114
 server=/huatai-elec.com/114.114.114.114
 server=/huatai-pb.com/114.114.114.114
 server=/huatai1993.com/114.114.114.114
+server=/huatan365.com/114.114.114.114
 server=/huatengsci.com/114.114.114.114
 server=/huati.cc/114.114.114.114
 server=/huatianxiangsu.com/114.114.114.114
