accelerated-domains: add ydzxyjhyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91801,6 +91801,7 @@ server=/ydyspc.com/114.114.114.114
 server=/ydywh.shop/114.114.114.114
 server=/ydyy120.com/114.114.114.114
 server=/ydzgphoto.com/114.114.114.114
+server=/ydzxyjhyy.com/114.114.114.114
 server=/ye1992.com/114.114.114.114
 server=/ye3.com/114.114.114.114
 server=/ye40.com/114.114.114.114
