--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46713,6 +46713,7 @@ server=/jbtxy.net/114.114.114.114
 server=/jbwtm.com/114.114.114.114
 server=/jbxc.net/114.114.114.114
 server=/jbxy.com/114.114.114.114
+server=/jbyy120.com/114.114.114.114
 server=/jbzj.com/114.114.114.114
 server=/jbzpw.com/114.114.114.114
 server=/jbzwread.com/114.114.114.114
