accelerated-domains: add weirenjob.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84308,6 +84308,7 @@ server=/weiqudao.net/114.114.114.114
 server=/weiqunbuluo.com/114.114.114.114
 server=/weiquyx.com/114.114.114.114
 server=/weiren.com/114.114.114.114
+server=/weirenjob.com/114.114.114.114
 server=/weiruipai.net/114.114.114.114
 server=/weisanyun.com/114.114.114.114
 server=/weisay.com/114.114.114.114
