accelerated-domains: add lkyhosp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55163,6 +55163,7 @@ server=/lksmarttech.com/114.114.114.114
 server=/lkssite.vip/114.114.114.114
 server=/lkszj.info/114.114.114.114
 server=/lkuaiy.com/114.114.114.114
+server=/lkyhosp.com/114.114.114.114
 server=/lkyou.com/114.114.114.114
 server=/lkysp.com/114.114.114.114
 server=/ll-hao123.com/114.114.114.114
