--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15004,6 +15004,7 @@ server=/bjhmcm.com/114.114.114.114
 server=/bjhmyq.com/114.114.114.114
 server=/bjhouse.com/114.114.114.114
 server=/bjhscx.com/114.114.114.114
+server=/bjhsyk.com/114.114.114.114
 server=/bjhsyuntai.com/114.114.114.114
 server=/bjhszp.com/114.114.114.114
 server=/bjhtcch.com/114.114.114.114
