accelerated-domains: add bczyyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13584,6 +13584,7 @@ server=/bcyimg.com/114.114.114.114
 server=/bcysh.com/114.114.114.114
 server=/bczcdn.com/114.114.114.114
 server=/bczs.net/114.114.114.114
+server=/bczyyy.com/114.114.114.114
 server=/bd-caict.com/114.114.114.114
 server=/bd-film.cc/114.114.114.114
 server=/bd-film.co/114.114.114.114
