accelerated-domains: add wujiemed.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86394,6 +86394,7 @@ server=/wujie.net/114.114.114.114
 server=/wujiecaifu.com/114.114.114.114
 server=/wujiehd.com/114.114.114.114
 server=/wujiehuyu.com/114.114.114.114
+server=/wujiemed.com/114.114.114.114
 server=/wujiexiang.com/114.114.114.114
 server=/wujiit.com/114.114.114.114
 server=/wujijiasu.com/114.114.114.114
