accelerated-domains: add xypifu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90953,6 +90953,7 @@ server=/xyniubi.com/114.114.114.114
 server=/xynsh.com/114.114.114.114
 server=/xyookj.com/114.114.114.114
 server=/xyous.com/114.114.114.114
+server=/xypifu.com/114.114.114.114
 server=/xyppzx.com/114.114.114.114
 server=/xypse.com/114.114.114.114
 server=/xyqb.com/114.114.114.114
