--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25107,6 +25107,7 @@ server=/dfhrc.com/114.114.114.114
 server=/dfhtjn.com/114.114.114.114
 server=/dfhy888.com/114.114.114.114
 server=/dfine.tech/114.114.114.114
+server=/dfjc999.com/114.114.114.114
 server=/dfjyun.com/114.114.114.114
 server=/dfkd.xyz/114.114.114.114
 server=/dfkhgj.com/114.114.114.114
