accelerated-domains: add qhdnxgyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66621,6 +66621,7 @@ server=/qhdglc.com/114.114.114.114
 server=/qhdjgyy.com/114.114.114.114
 server=/qhdlcdn.com/114.114.114.114
 server=/qhdnews.com/114.114.114.114
+server=/qhdnxgyy.com/114.114.114.114
 server=/qhdren.com/114.114.114.114
 server=/qhduhu.com/114.114.114.114
 server=/qhdxgps.com/114.114.114.114
