accelerated-domains: add wdyiyuan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83941,6 +83941,7 @@ server=/wdxmzy.com/114.114.114.114
 server=/wdxtub.com/114.114.114.114
 server=/wdy33.com/114.114.114.114
 server=/wdy44.com/114.114.114.114
+server=/wdyiyuan.com/114.114.114.114
 server=/wdyxgames.com/114.114.114.114
 server=/wdzj.com/114.114.114.114
 server=/wdzx.com/114.114.114.114
