--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91284,6 +91284,7 @@ server=/yandian58.com/114.114.114.114
 server=/yandianying.com/114.114.114.114
 server=/yanding.com/114.114.114.114
 server=/yandui.com/114.114.114.114
+server=/yanduyiyuan.com/114.114.114.114
 server=/yanedu.com/114.114.114.114
 server=/yanfabu.com/114.114.114.114
 server=/yanfen.online/114.114.114.114
