--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66142,6 +66142,7 @@ server=/pxvfofs.com/114.114.114.114
 server=/pxvps.com/114.114.114.114
 server=/pxwsemi.com/114.114.114.114
 server=/pxx.io/114.114.114.114
+server=/pxykyy.com/114.114.114.114
 server=/pxyyjt.com/114.114.114.114
 server=/pxzhbsq.com/114.114.114.114
 server=/py-axa.com/114.114.114.114
