accelerated-domains: add tzmem.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81027,6 +81027,7 @@ server=/tzkciz.com/114.114.114.114
 server=/tzlib.net/114.114.114.114
 server=/tzlmt.com/114.114.114.114
 server=/tzm66.com/114.114.114.114
+server=/tzmem.com/114.114.114.114
 server=/tzqingzhifeng.com/114.114.114.114
 server=/tzqytv.com/114.114.114.114
 server=/tzres.com/114.114.114.114
