accelerated-domains: add amcarebsh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10901,6 +10901,7 @@ server=/amberknit.com/114.114.114.114
 server=/ambier.net/114.114.114.114
 server=/ambition-soft.com/114.114.114.114
 server=/ambow.com/114.114.114.114
+server=/amcarebsh.com/114.114.114.114
 server=/amcarewl.com/114.114.114.114
 server=/amcfortune.com/114.114.114.114
 server=/amchamchina.org/114.114.114.114
