--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41423,6 +41423,7 @@ server=/hongyikun.com/114.114.114.114
 server=/hongyimarine.com/114.114.114.114
 server=/hongyimro.com/114.114.114.114
 server=/hongyirong.com/114.114.114.114
+server=/hongyitang.com/114.114.114.114
 server=/hongyu-qi.com/114.114.114.114
 server=/hongyuanqh.com/114.114.114.114
 server=/hongyue.com/114.114.114.114
