accelerated-domains: add memyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58120,6 +58120,7 @@ server=/memsconsulting.com/114.114.114.114
 server=/memseminar.com/114.114.114.114
 server=/memsensing.com/114.114.114.114
 server=/memuu.com/114.114.114.114
+server=/memyy.com/114.114.114.114
 server=/men.ci/114.114.114.114
 server=/menchuang.biz/114.114.114.114
 server=/menchuang58.com/114.114.114.114
