--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15035,6 +15035,7 @@ server=/bjinfobank.com/114.114.114.114
 server=/bjipwqzx.com/114.114.114.114
 server=/bjitic.com/114.114.114.114
 server=/bjiwex.com/114.114.114.114
+server=/bjjbbayy.com/114.114.114.114
 server=/bjjchf.com/114.114.114.114
 server=/bjjdwx.com/114.114.114.114
 server=/bjjf.cc/114.114.114.114
