accelerated-domains: add ykhongye.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93141,6 +93141,7 @@ server=/ykclass.com/114.114.114.114
 server=/ykdgd.com/114.114.114.114
 server=/ykdmsy.com/114.114.114.114
 server=/ykedu.net/114.114.114.114
+server=/ykhongye.com/114.114.114.114
 server=/ykimg.com/114.114.114.114
 server=/ykinvestment.com/114.114.114.114
 server=/ykjljdcss.com/114.114.114.114
