accelerated-domains: add bjent.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14968,6 +14968,7 @@ server=/bjdxzxy.com/114.114.114.114
 server=/bjeasycom.com/114.114.114.114
 server=/bjecutuning.com/114.114.114.114
 server=/bjef.com/114.114.114.114
+server=/bjent.org/114.114.114.114
 server=/bjepark.com/114.114.114.114
 server=/bjesg.com/114.114.114.114
 server=/bjesound.com/114.114.114.114
