--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15051,6 +15051,7 @@ server=/bjjkw.net/114.114.114.114
 server=/bjjmzh.com/114.114.114.114
 server=/bjjnzf.com/114.114.114.114
 server=/bjjqzyy.com/114.114.114.114
+server=/bjjstyyzzyy.com/114.114.114.114
 server=/bjjsyy.com/114.114.114.114
 server=/bjjszyyy.com/114.114.114.114
 server=/bjjtat.com/114.114.114.114
