accelerated-domains: add beijingguoyitang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13849,6 +13849,7 @@ server=/beijingcenterforthearts.com/114.114.114.114
 server=/beijingfenxiangkeji.com/114.114.114.114
 server=/beijingfojiao.com/114.114.114.114
 server=/beijinggobroadhospital.com/114.114.114.114
+server=/beijingguoyitang.com/114.114.114.114
 server=/beijinghopemedcare.com/114.114.114.114
 server=/beijinghuiyizhongxin.com/114.114.114.114
 server=/beijingkbd.com/114.114.114.114
