--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41121,6 +41121,7 @@ server=/hntsw.com/114.114.114.114
 server=/hntv.tv/114.114.114.114
 server=/hntxxy.com/114.114.114.114
 server=/hntymg.com/114.114.114.114
+server=/hntzyy.com/114.114.114.114
 server=/hnukai.com/114.114.114.114
 server=/hnwanglong.com/114.114.114.114
 server=/hnwbxx.com/114.114.114.114
