--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60322,6 +60322,7 @@ server=/myex.cc/114.114.114.114
 server=/myezdns.com/114.114.114.114
 server=/myfans.cc/114.114.114.114
 server=/myfdmg.com/114.114.114.114
+server=/myfhospital.com/114.114.114.114
 server=/myfreshnet.com/114.114.114.114
 server=/myfrfr.com/114.114.114.114
 server=/myfun7.com/114.114.114.114
