accelerated-domains: add bjtkyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15203,6 +15203,7 @@ server=/bjtitle.com/114.114.114.114
 server=/bjtjhn.com/114.114.114.114
 server=/bjtjw.net/114.114.114.114
 server=/bjtjzx.com/114.114.114.114
+server=/bjtkyy.com/114.114.114.114
 server=/bjtlky888.com/114.114.114.114
 server=/bjtmjr.com/114.114.114.114
 server=/bjtobacco.com/114.114.114.114
