--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14986,6 +14986,7 @@ server=/bjfyw.org/114.114.114.114
 server=/bjgas.com/114.114.114.114
 server=/bjgcl.com/114.114.114.114
 server=/bjggk.com/114.114.114.114
+server=/bjgjtjk.com/114.114.114.114
 server=/bjglxf.com/114.114.114.114
 server=/bjglxt.com/114.114.114.114
 server=/bjgongteng.com/114.114.114.114
