accelerated-domains: add hkyymn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40717,6 +40717,7 @@ server=/hkxen.com/114.114.114.114
 server=/hky360.com/114.114.114.114
 server=/hkyukai.vip/114.114.114.114
 server=/hkyykq.com/114.114.114.114
+server=/hkyymn.com/114.114.114.114
 server=/hkzlcm.com/114.114.114.114
 server=/hl-brushes.com/114.114.114.114
 server=/hl-bxg.com/114.114.114.114
