accelerated-domains: add pfzhiliao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64831,6 +64831,7 @@ server=/pfinno.com/114.114.114.114
 server=/pft12301.cc/114.114.114.114
 server=/pftianshanno.com/114.114.114.114
 server=/pfwx.com/114.114.114.114
+server=/pfzhiliao.com/114.114.114.114
 server=/pg-leak.com/114.114.114.114
 server=/pg114.net/114.114.114.114
 server=/pg2bk.icu/114.114.114.114
